tests/errors/lexing/missing_terminating_apost_char.c
// Missing terminating ' character
void main()
{
	'a
	;
}
